# fractional-pde

./: .gitignore  CMakeLists.txt  README.md  __Makefile
makefiles/: GCC_CPU_ONLY_default.mk  GCC_default.mk  NVCC_default.mk
src/: auxiliary.h  auxiliary.hpp  blocksys.h  blocksys_equidistant.hpp  blocksys_nonequidistant.hpp  demo.h  demo.hpp  fractional_pde.h  fractional_pde.hpp  gpukernels.cu  gpukernels.cuh  main.cpp
src/algebraiccontainers/: algebraiccontainers.h  algebraiccontainers_algebraicmatrix.hpp  algebraiccontainers_algebraicvector.hpp  coefficientmatrix.h  coefficientmatrix.hpp  containerfactory.h  containerfactory.hpp
src/devicedata/: devicedata.h  devicedata.hpp  devicedata_devicearray.hpp  devicedata_devicematrix.hpp  devicedata_devicescalar.hpp  initializememory.cu  initializememory.cuh  memorymanager.cpp  memorymanager.h  memorymanager.hpp
src/processingunit/: gpu_data.h  gpu_data.hpp  gpu_handle.cpp  gpu_handle.h  gpu_magma_queue.cpp  gpu_magma_queue.h  processingunit.h  processingunit.hpp  processingunit_cpu.hpp  processingunit_gpu.hpp  processingunit_gpu_magma.hpp  processingunit_gpu_mixed.hpp  processingunit_timerprocessingunit.hpp  timer.cpp  timer.h
